--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-x-spoiler {
+.x-spoiler {
     background: #000!important;
     color: #000!important;
-    display: block;
+    display: inline;
+    padding: 1px 3px 1px 3px;
 }
-x-spoiler:hover {
+.x-spoiler:hover {
     color: #fff!important;
 }
